[package]
name = "pkcs8_openssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
rand = "0.8.5"
rsa = "0.9.2"
